# CITL-2026-App-Portfolio

./: !! CITL LAUNCHER !!.cmd  !! CITL LAUNCHER !!.desktop  .gitattributes  .gitignore  BACKUP_CITL_RECOVERY_ARCHIVE.cmd  BUILD_ALL_CITL_EXES_WINDOWS.cmd  BUILD_CITL_USB_REPAIR_CLONER_WINDOWS.cmd  BUILD_LINUX_EXES.sh  BUILD_LLMOPS_EXE_WINDOWS.cmd  CITATION.cff  CITL App Sync.cmd  CITL App Sync.desktop  CITL App Sync.sh  CITL Document Composer.desktop  CITL Document Composer.sh  CITL Field Apps.cmd  CITL Presentation Suite.cmd  CITL Presentation Suite.desktop  CITL Presentation Suite.sh  CITL Staff Toolkit.desktop  CITL Staff Toolkit.sh  CITL Sync Hub.cmd  CITL Sync Hub.desktop  CITL Sync Hub.sh  CITL Workstation Apps.cmd  CITL-ALL-IN-ONE.ps1  CITL-Run-WSL-Demo.cmd  CITL-Run.cmd  CITL-SYNC-SYSTEM-v2-README.md  CITL-Sync-OneClick.cmd  CITL.code-workspace  CITL_AI_Workforce_Grant_Document (AutoRecovered).docx  CITL_AI_Workforce_Grant_Document.docx  CITL_AI_Workforce_Grant_Document.md  CITL_LLMOps Q2 2026 Overview.docx  CITL_TEAM_UPDATE_LOG_MAY_JUNE_2026.txt  CITL_USB_LAUNCHER.sh  COPY_THIS_USB_TO_NEXT_UBUNTU.sh  COPY_THIS_USB_TO_NEXT_WINDOWS.cmd  CREDITS.md  (+106 more)
factbook-assistant/: DIAGNOSE_FACTBOOK.cmd  Factbook Assistant.bat  Run-CITL-LibraryAssistant.ps1  The VALIS Trilogy.txt  build_corpus_index.py  build_corpus_index.py.bak.20260225_160639  build_factbook_index.py  build_factbook_index_factbook_only.py  citl_app_sync.py  citl_audio_ffmpeg.py  citl_audio_ffmpeg_graceful.py  citl_audio_ffmpeg_graceful_v2.py  citl_auto_index.py  citl_class_capture.py  citl_doc_composer.py  (+40 more)
(+198 files in other folders)
